# block_compression

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
compressor/: Cargo.toml
compressor/src/: main.rs
src/: bc3_compressor.rs  block_compressor.rs  decode.rs  encode.rs  lib.rs  main.rs  settings.rs
src/decode/: block.rs
src/encode/: bc1_to_5.rs  bc6h.rs  bc7.rs  common.rs
src/shader/: BC1_to_5.wgsl  BC6H.wgsl  BC7.wgsl  bc1_to_5.wgsl  bc3.wgsl  bc6h.wgsl  bc7.wgsl  block_compression.wgsl
tests/: metrics.rs  multi_tasks.rs
tests/common/: metrics.rs  mod.rs
