[workspace.package]
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2021"
rust-version = "1.80"

[package]
name = "block_compression"
description = "Texture block compression using WGPU compute shader"
version = "0.1.1"
license = "MIT"
documentation = "https://docs.rs/block_compression"
repository = "https://github.com/hasenbanck/block_compression"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = ["texture", "image", "compress", "wgpu"]
categories = ["rendering", "rendering::engine"]
exclude = ["tests/images/"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["bc6h", "bc7"]
bc6h = ["half"]
bc7 = []

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
half = { workspace = true, optional = true }
wgpu = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
intel_tex_2 = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true, features = ["static-dxc"] }

[workspace.dependencies]
bytemuck = "1"
ddsfile = "0.5"
half = "2"
image = { version = "0.25", default-features = false }
intel_tex_2 = "0.4"
pollster = "0.4"
wgpu = "24"

[package.metadata.docs.rs]
features = ["bc6h", "bc7", "half"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "compressor",
]
