[workspace.package]
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2021"
rust-version = "1.80"

[package]
name = "block_compression"
description = "Texture block compression using WGPU compute shader"
version = "0.3.0"
license = "MIT"
documentation = "https://docs.rs/block_compression"
repository = "https://github.com/hasenbanck/block_compression"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = ["texture", "image", "compress", "wgpu"]
categories = ["rendering", "rendering::engine"]
exclude = ["tests/images/"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["bc15", "bc6h", "bc7", "wgpu"]
bc15 = []
bc6h = ["half"]
bc7 = []
rayon = ["dep:rayon", "dep:strength_reduce"]

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
half = { workspace = true, optional = true, features = ["bytemuck"] }
rayon = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
strength_reduce = { workspace = true, optional = true }


[dev-dependencies]
image = { workspace = true, features = ["png"] }
pollster = { workspace = true }
wgpu = { workspace = true, features = ["static-dxc"] }

[workspace.dependencies]
bytemuck = "1"
ddsfile = "0.5"
half = "2"
image = { version = "0.25", default-features = false }
pollster = "0.4"
wgpu = "24"
rayon = "1.10.0"
strength_reduce = "0.2.4"

[package.metadata.docs.rs]
features = ["bc6h", "bc7", "half"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["compressor"]
